# Agenda-plus-plus

./: CMakeLists.txt  List.cpp  List.h  README.md  agenda.cpp  agenda.h  date.h  exceptii.cpp  exceptii.h  item.cpp  item.h  main.cpp  shoppingList_factory.cpp  shoppingList_factory.h  shopping_item.cpp  shopping_item.h  shopping_list.cpp  shopping_list.h  to_do_item.cpp  to_do_item.h  to_do_list.cpp  to_do_list.h
.github/workflows/: main.yml
